ACFParser and SteamApp class

--- a/Steam Apps Manager/Steam Apps Manager.csproj
+++ b/Steam Apps Manager/Steam Apps Manager.csproj
@@ -55,6 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="SteamUtils\ACFNode.cs" />
+    <Compile Include="SteamUtils\SteamApp.cs" />
     <Compile Include="SteamUtils\SteamUtils.cs" />
     <Page Include="GUI\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
