--- a/Steam Apps Manager/Steam Apps Manager.csproj
+++ b/Steam Apps Manager/Steam Apps Manager.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="SteamUtils\ACFNode.cs" />
+    <Compile Include="SteamUtils\AppsDirectory.cs" />
     <Compile Include="SteamUtils\SteamApp.cs" />
     <Compile Include="SteamUtils\SteamUtils.cs" />
     <Page Include="GUI\MainWindow.xaml">
